# ScienceAndTheologyEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
abi/: CMakeLists.txt  abi_common.h  hash_abi.h  json_abi.h  render_snapshot_abi.h  runtime_abi.c  runtime_abi.h  runtime_host_abi.c  runtime_host_abi.h  runtime_key_index_abi.h  uuid_abi.h
assets/: CMakeLists.txt  asset_cache.h  asset_catalog.cpp  asset_catalog.h  asset_handle.h  asset_manager.cpp  asset_manager.h  asset_manifest.cpp  asset_manifest.h  asset_source.h  filesystem_asset_source.cpp  filesystem_asset_source.h  font_atlas.cpp  font_atlas.h  gpu_asset_uploader.h  loader.cpp  loader.h  material_atlas.cpp  material_atlas.h  mesh_asset_loader.cpp  mesh_asset_loader.h  mesh_asset_reference_registry.cpp  mesh_asset_reference_registry.h  shader_cache.cpp  shader_cache.h  texture_cache.cpp  texture_cache.h  vulkan_gpu_asset_uploader.cpp  vulkan_gpu_asset_uploader.h
core/: CMakeLists.txt  binary_reader.h  binary_writer.h  clock.h  engine_config.cpp  engine_config.h  error.h  events.h  expected.h  hash.h  job_system.cpp  job_system.h  json.cpp  json.h  log.cpp  log.h  memory_tracker.cpp  memory_tracker.h  path_utils.cpp  path_utils.h  profiling.h  runtime_config.cpp  runtime_config.h  runtime_key_index.cpp  runtime_key_index.h  serializer.h  snt_assert.h  uuid.cpp  uuid.h
data/: CMakeLists.txt
data/defs/: block_entity.h  block_entity_registry.cpp  (+18 more)
ecs/: CMakeLists.txt  camera_system.cpp  camera_system.h  components.h  core_components.h  entity_guid.cpp  entity_guid.h  entt_config.h  event_bus.h  system.h  system_scheduler.cpp  system_scheduler.h  world.cpp  world.h  world_command_queue.cpp  world_command_queue.h
engine/: CMakeLists.txt  client_runtime.cpp  client_runtime.h  client_services.h  client_session.h  demo_world_bootstrap.cpp  demo_world_bootstrap.h  engine.cpp  engine.h  game_session.h  runtime.cpp  runtime.h  runtime_observer.h  runtime_services.h  simulation_runtime.cpp  simulation_runtime.h  simulation_runtime_observer.h  simulation_services.h  simulation_session.h  zig_simulation_runtime_host.cpp  zig_simulation_runtime_host.h
engine_app/: CMakeLists.txt  main.cpp
gameplay/: CMakeLists.txt  machine_tick_system.cpp  machine_tick_system.h
input/: CMakeLists.txt  input_state.h  input_system.cpp  input_system.h
network/: CMakeLists.txt  lan_discovery.cpp  lan_discovery.h  replication.cpp  replication.h  replication_wire.cpp  replication_wire.h  socket_platform.cpp  socket_platform.h  steam_p2p_transport.cpp  steam_p2p_transport.h  tcp_udp_transport.cpp  tcp_udp_transport.h
platform/: CMakeLists.txt  window.cpp  window.h
player/: CMakeLists.txt  collision_snapshot.cpp  collision_snapshot.h  player_controller.cpp  player_controller.h  player_physics_system.cpp  player_physics_system.h  ray_cast.cpp  ray_cast.h  voxel_collision.cpp  voxel_collision.h
render/: CMakeLists.txt  render_components.h  render_system.cpp  render_system.h
render_backend/: CMakeLists.txt  command_context.cpp  command_context.h  vertex_buffer_pool.cpp  vertex_buffer_pool.h  vma_impl.cpp  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_depth.cpp  vulkan_depth.h  vulkan_descriptor.cpp  vulkan_descriptor.h  vulkan_device.cpp  vulkan_device.h  vulkan_frame.cpp  vulkan_frame.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_mesh.cpp  vulkan_mesh.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_swapchain.cpp  vulkan_swapchain.h
renderer/: CMakeLists.txt  pipeline_cache.cpp  pipeline_cache.h  render_graph.cpp  render_graph.h  render_graph_pass.cpp  render_graph_pass.h  render_graph_resource.cpp  render_graph_resource.h  transient_pool.cpp  transient_pool.h
scene/: CMakeLists.txt  scene.h
script/: CMakeLists.txt  content_host.h  file_watcher.cpp  file_watcher.h  registry_hub.cpp  registry_hub.h  script_api.cpp  script_api.h  script_context.cpp  script_context.h  script_engine.cpp  script_engine.h  script_loader.cpp  script_loader.h  script_manager.cpp  script_manager.h  script_module.cpp  script_module.h
tests/: CMakeLists.txt  test_abi_c_smoke.c  test_abi_contract.cpp  test_asset_boundary.cpp  test_asset_cache.cpp  test_asset_catalog.cpp  test_asset_handle.cpp  test_asset_manifest.cpp  test_asset_pipeline.cpp  test_binary_io.cpp  test_clock.cpp  test_data.cpp  test_ecs.cpp  test_engine_config.cpp  test_entity_guid.cpp  test_filesystem_asset_source.cpp  test_greedy_mesh.cpp  test_hash.cpp  test_job_system.cpp  test_json.cpp  test_machine_tick_system.cpp  test_main.cpp  test_mui_retained.cpp  test_network.cpp  test_p7_reload.cpp  test_path_utils.cpp  test_player_physics.cpp  test_registry_hub.cpp  test_render_components.cpp  test_runtime_config.cpp  test_runtime_key_index.cpp  test_runtime_observer.cpp  test_scene_serialize.cpp  test_script_content_host.h  test_script_engine.cpp  test_script_loader.cpp  test_simulation_runtime.cpp  test_simulation_runtime_observer.cpp  test_uuid.cpp  test_voxel_data.cpp
tools/: CMakeLists.txt  engine_test.cpp  gen_default_scene.cpp
ui/: CMakeLists.txt  debug_panel.cpp  debug_panel.h  game_ui.cpp  game_ui.h  mod_ui.cpp  mod_ui.h  mod_ui_internal.h  mui.cpp  mui.h  mui_gameplay_controls.cpp  mui_gameplay_controls.h  mui_renderer.cpp  mui_renderer.h  retained_mui.cpp  retained_mui.h  retained_mui_animation.h  retained_mui_arc.cpp  retained_mui_arc.h  retained_mui_controls.h  retained_mui_drag.h  retained_mui_input_router.cpp  retained_mui_input_router.h  retained_mui_layout.h  retained_mui_runtime.cpp  retained_mui_runtime.h  retained_mui_screen_stack.cpp  retained_mui_screen_stack.h  retained_mui_text.cpp  retained_mui_text.h  retained_mui_text_input.h  retained_mui_text_input_service.cpp  retained_mui_text_input_service.h  retained_mui_text_view.h  retained_mui_types.h  retained_mui_utf8.h  retained_mui_view.cpp  retained_mui_view.h  retained_mui_view_model.cpp  retained_mui_view_model.h  (+7 more)
voxel/: CMakeLists.txt  chunk_render_system.cpp  chunk_render_system.h  chunk_renderer.cpp  chunk_renderer.h  collision_faces.cpp  collision_faces.h  greedy_mesh.cpp  greedy_mesh.h  voxel_vertex.h
(+57 files in other folders)
